--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ layout: default
 
 <div class="row flex-column-reverse flex-md-row py-2">
     <div class="col-md-8" id="bio">
-        <h1>John Doe</h1>
+        <h1>Shihan Fang</h1>
         <p class="text-justify">
-            A minimalistic academic-style Jekyll webpage template available <a href="https://github.com/vsimkus/academic-jekyll">here</a>.
+            I am a senior undergraduate in <a href="https://acm.sjtu.edu.cn/home">ACM Honors Class</a> of Shanghai Jiao Tong University, majoring in Computer Science.
         </p>
-        <p class="text-justify">
+        <!-- <p class="text-justify">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum fermentum, tortor sed consequat fringilla, odio eros aliquam odio, sed egestas felis augue ac ipsum. Praesent purus risus, iaculis quis vehicula sit amet, sagittis et tellus. 
         </p>
         <p class="text-justify">
@@ -16,17 +16,14 @@ layout: default
         </p>
         <p class="text-justify">
             Cras nec sem aliquam, pellentesque enim suscipit, fringilla augue. Sed et interdum nisl, sed facilisis sem. Morbi rutrum sapien a vehicula molestie. Sed feugiat tempor ligula, fringilla finibus dui pharetra id. Donec molestie aliquet diam, et tincidunt urna feugiat nec. Proin scelerisque quam at ante rutrum lacinia. Quisque ac pretium est.
-        </p>
+        </p> -->
         <p style="text-align:center">
-            <a target="_blank" href="https://mailhide.io/">Email</a> &nbsp;/&nbsp;
-            <a href="https://github.com/">GitHub</a> &nbsp;/&nbsp;
-            <a href="https://twitter.com/">Twitter</a> &nbsp;/&nbsp;
-            <a href="https://scholar.google.com/citations?user=">Google Scholar</a> &nbsp;/&nbsp;
-            <a href="https://www.linkedin.com/in/">LinkedIn </a>
+            <a target="_blank" href="fang-account@sjtu.edu.cn">Email</a> &nbsp;/&nbsp;
+            <a href="https://github.com/Fangtangtang">GitHub</a>
         </p>
     </div>
     <div class="col-md-4" style="z-index:4;">
-        <img alt="profile photo" id="portrait" src="images/portrait.jpg">
+        <img alt="profile photo" id="portrait" src="images/bio.jpg">
     </div>
 </div>
 
