--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@ layout: default
         <p class="text-justify">
             I am a senior undergraduate in <a href="https://acm.sjtu.edu.cn/home">ACM Honors Class</a> of Shanghai Jiao Tong University, majoring in Computer Science.
         </p>
+        <p class="text-justify">
+            I am currently a research intern with the <a href="https://zhang.ece.cornell.edu/"></a>Zhang Research Group</a> in the Computer Systems Laboratory at Cornell University, advised by <a href="https://www.csl.cornell.edu/~zhiruz/"></a>Prof. Zhiru Zhang</a>. Prior to this, I had the privilege of working with <a href="https://www.cs.sjtu.edu.cn/~leng-jw/"></a>Prof. Jingwen Leng</a> at Shanghai Jiao Tong University.
+        </p>
         <!-- <p class="text-justify">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum fermentum, tortor sed consequat fringilla, odio eros aliquam odio, sed egestas felis augue ac ipsum. Praesent purus risus, iaculis quis vehicula sit amet, sagittis et tellus. 
-        </p>
-        <p class="text-justify">
             Vestibulum fringilla, est a ullamcorper semper, risus justo interdum lacus, ut auctor tortor risus id mauris. Cras placerat ultrices faucibus. Nullam et iaculis elit. Proin vehicula erat at cursus euismod.
-        </p>
-        <p class="text-justify">
-            Cras nec sem aliquam, pellentesque enim suscipit, fringilla augue. Sed et interdum nisl, sed facilisis sem. Morbi rutrum sapien a vehicula molestie. Sed feugiat tempor ligula, fringilla finibus dui pharetra id. Donec molestie aliquet diam, et tincidunt urna feugiat nec. Proin scelerisque quam at ante rutrum lacinia. Quisque ac pretium est.
         </p> -->
+        <p class="text-justify">
+            I plan to pursue a Ph.D. in Computer Science, starting in Fall 2026. If you are interested in my research, feel free to contact me at <a href="fang-account@sjtu.edu.cn"></a>fang-account@sjtu.edu.cn</a>!
+        </p>
         <p style="text-align:center">
-            <a target="_blank" href="fang-account@sjtu.edu.cn">Email</a> &nbsp;/&nbsp;
-            <a href="https://github.com/Fangtangtang">GitHub</a>
+            <a target="_blank" href="https://github.com/Fangtangtang">GitHub</a> &nbsp;/&nbsp;
+            <!-- <a href="https://github.com/Fangtangtang">GitHub</a> -->
         </p>
     </div>
     <div class="col-md-4" style="z-index:4;">
