--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
             I am a senior undergraduate in <a href="https://acm.sjtu.edu.cn/home">ACM Honors Class</a> of Shanghai Jiao Tong University, majoring in Computer Science.
         </p>
         <p class="text-justify">
-            I am currently a research intern with the <a href="https://zhang.ece.cornell.edu/"></a>Zhang Research Group</a> in the Computer Systems Laboratory at Cornell University, advised by <a href="https://www.csl.cornell.edu/~zhiruz/"></a>Prof. Zhiru Zhang</a>. Prior to this, I had the privilege of working with <a href="https://www.cs.sjtu.edu.cn/~leng-jw/"></a>Prof. Jingwen Leng</a> at Shanghai Jiao Tong University.
+            I am currently a research intern with the <a href="https://zhang.ece.cornell.edu/">Zhang Research Group</a> in the Computer Systems Laboratory at Cornell University, advised by <a href="https://www.csl.cornell.edu/~zhiruz/">Prof. Zhiru Zhang</a>. Prior to this, I had the privilege of working with <a href="https://www.cs.sjtu.edu.cn/~leng-jw/">Prof. Jingwen Leng</a> at Shanghai Jiao Tong University.
         </p>
         <!-- <p class="text-justify">
             Vestibulum fringilla, est a ullamcorper semper, risus justo interdum lacus, ut auctor tortor risus id mauris. Cras placerat ultrices faucibus. Nullam et iaculis elit. Proin vehicula erat at cursus euismod.
