--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
             Vestibulum fringilla, est a ullamcorper semper, risus justo interdum lacus, ut auctor tortor risus id mauris. Cras placerat ultrices faucibus. Nullam et iaculis elit. Proin vehicula erat at cursus euismod.
         </p> -->
         <p class="text-justify">
-            I plan to pursue a Ph.D. in Computer Science, starting in Fall 2026. If you are interested in my research, feel free to contact me at <a href="fang-account@sjtu.edu.cn"></a>fang-account@sjtu.edu.cn</a>!
+            I plan to pursue a Ph.D. in Computer Science starting in Fall 2026. If you are interested in my research, feel free to contact me at <a href="fang-account@sjtu.edu.cn">fang-account@sjtu.edu.cn</a>!
         </p>
         <p style="text-align:center">
             <a target="_blank" href="https://github.com/Fangtangtang">GitHub</a> &nbsp;/&nbsp;
