--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@ layout: default
         <p class="text-justify">
             I am currently a research intern with the <a href="https://zhang.ece.cornell.edu/">Zhang Research Group</a> in the Computer Systems Laboratory at Cornell University, advised by <a href="https://www.csl.cornell.edu/~zhiruz/">Prof. Zhiru Zhang</a>. Prior to this, I had the privilege of working with <a href="https://www.cs.sjtu.edu.cn/~leng-jw/">Prof. Jingwen Leng</a> at Shanghai Jiao Tong University.
         </p>
-        <!-- <p class="text-justify">
-            Vestibulum fringilla, est a ullamcorper semper, risus justo interdum lacus, ut auctor tortor risus id mauris. Cras placerat ultrices faucibus. Nullam et iaculis elit. Proin vehicula erat at cursus euismod.
-        </p> -->
+        <p class="text-justify">
+            I am broadly interested in compilers and computer architecture, with a special focus on compiler for accelerators, including accelerator programming and design.
+        </p>
         <p class="text-justify">
             I plan to pursue a Ph.D. in Computer Science starting in Fall 2026. If you are interested in my research, feel free to contact me at <a href="fang-account@sjtu.edu.cn">fang-account@sjtu.edu.cn</a>!
         </p>
         <p style="text-align:center">
-            <a target="_blank" href="https://github.com/Fangtangtang">GitHub</a> &nbsp;/&nbsp;
+            <a target="_blank" href="https://github.com/Fangtangtang">GitHub</a> 
+            <!-- &nbsp;/&nbsp; -->
             <!-- <a href="https://github.com/Fangtangtang">GitHub</a> -->
         </p>
     </div>
