--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@ layout: default
             I plan to pursue a Ph.D. in Computer Science starting in Fall 2026. If you are interested in my research, feel free to contact me at <a href="fang-account@sjtu.edu.cn">fang-account@sjtu.edu.cn</a>!
         </p>
         <p style="text-align:center">
-            <a target="_blank" href="https://github.com/Fangtangtang">GitHub</a> 
-            <!-- &nbsp;/&nbsp; -->
-            <!-- <a href="https://github.com/Fangtangtang">GitHub</a> -->
+            <a target="_blank" href="https://github.com/Fangtangtang">GitHub</a> &nbsp;/&nbsp;
+            <a href="https://orcid.org/0009-0002-6879-2166">ORCID</a>
         </p>
     </div>
     <div class="col-md-4" style="z-index:4;">
