--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
     <div class="col-md-8" id="bio">
         <h1>Shihan Fang</h1>
         <p class="text-justify">
-            I am a senior undergraduate in <a href="https://acm.sjtu.edu.cn/home">ACM Honors Class</a> of Shanghai Jiao Tong University, majoring in Computer Science.
+            I am a senior undergraduate in <a href="https://acm.sjtu.edu.cn/home">Zhiyuan Honors Program ACM Class</a> of Shanghai Jiao Tong University, majoring in Computer Science and Technology.
         </p>
         <p class="text-justify">
             I am currently a research intern with the <a href="https://zhang.ece.cornell.edu/">Zhang Research Group</a> in the Computer Systems Laboratory at Cornell University, advised by <a href="https://www.csl.cornell.edu/~zhiruz/">Prof. Zhiru Zhang</a>. Prior to this, I had the privilege of working with <a href="https://www.cs.sjtu.edu.cn/~leng-jw/">Prof. Jingwen Leng</a> at Shanghai Jiao Tong University.
