--- a/gallery.html
+++ b/gallery.html
@@ -1,3 +1,9 @@
+---
+layout: default
+title: Gallery
+permalink: /gallery/
+---
+
 <div class="row flex-column-reverse flex-md-row py-2">
     <div class="col-md-8" id="bio">
         <h1>Shihan Fang</h1>
