--- a/gallery.html
+++ b/gallery.html
@@ -25,6 +25,6 @@ permalink: /gallery/
         </p>
     </div>
     <div class="col-md-4" style="z-index:4;">
-        <img alt="profile photo" id="portrait" src="images/gallery-bio.jpg">
+        <img alt="profile photo" id="portrait" src="{{ site.baseurl }}/images/gallery-bio.jpg">
     </div>
 </div>
