--- a/gallery.html
+++ b/gallery.html
@@ -28,3 +28,17 @@ permalink: /gallery/
         <img alt="profile photo" id="portrait" src="{{ site.baseurl }}/images/gallery-bio.jpg">
     </div>
 </div>
+
+<div class="container py-5">
+  {% for work in site.data.gallery %}
+  <div class="row align-items-center mb-5 {% if forloop.index0 % 2 == 1 %}flex-column-reverse flex-md-row{% endif %}">
+    <div class="col-md-6">
+      <img src="{{ work.image | relative_url }}" class="img-fluid" alt="{{ work.title }}">
+    </div>
+    <div class="col-md-6">
+      <h3>{{ work.title }}</h3>
+      <p>{{ work.description }}</p>
+    </div>
+  </div>
+  {% endfor %}
+</div>
