--- a/gallery.html
+++ b/gallery.html
@@ -8,20 +8,15 @@ permalink: /gallery/
     <div class="col-md-8" id="bio">
         <h1>Shihan Fang</h1>
         <p class="text-justify">
-            I am a senior undergraduate in <a href="https://acm.sjtu.edu.cn/home">Zhiyuan Honors Program ACM Class</a> of Shanghai Jiao Tong University, majoring in Computer Science and Technology.
+            I am a senior undergraduate in <a href="https://acm.sjtu.edu.cn/home">Zhiyuan Honors Program ACM Class</a>
+            of Shanghai Jiao Tong University, majoring in Computer Science and Technology.
         </p>
         <p class="text-justify">
-            I am currently a research intern with the <a href="https://zhang.ece.cornell.edu/">Zhang Research Group</a> in the Computer Systems Laboratory at Cornell University, advised by <a href="https://www.csl.cornell.edu/~zhiruz/">Prof. Zhiru Zhang</a>. Prior to this, I had the privilege of working with <a href="https://www.cs.sjtu.edu.cn/~leng-jw/">Prof. Jingwen Leng</a> at Shanghai Jiao Tong University.
-        </p>
-        <p class="text-justify">
-            I am broadly interested in compilers and computer architecture, with a special focus on compiler for accelerators, including accelerator programming and design.
-        </p>
-        <p class="text-justify">
-            I plan to pursue a Ph.D. in Computer Science starting in Fall 2026. If you are interested in my research, feel free to contact me at <a href="fang-account@sjtu.edu.cn">fang-account@sjtu.edu.cn</a>!
-        </p>
-        <p style="text-align:center">
-            <a target="_blank" href="https://github.com/Fangtangtang">GitHub</a> &nbsp;/&nbsp;
-            <a href="https://orcid.org/0009-0002-6879-2166">ORCID</a>
+            I am currently a research intern with the <a href="https://zhang.ece.cornell.edu/">Zhang Research Group</a>
+            in the Computer Systems Laboratory at Cornell University, advised by <a
+                href="https://www.csl.cornell.edu/~zhiruz/">Prof. Zhiru Zhang</a>. Prior to this, I had the privilege of
+            working with <a href="https://www.cs.sjtu.edu.cn/~leng-jw/">Prof. Jingwen Leng</a> at Shanghai Jiao Tong
+            University.
         </p>
     </div>
     <div class="col-md-4" style="z-index:4;">
@@ -29,29 +24,36 @@ permalink: /gallery/
     </div>
 </div>
 
-<div class="row align-items-end mb-5 {% if forloop.index0 % 2 == 1 %}flex-column-reverse flex-md-row{% endif %}">
-  
-  <div class="col-md-8">
-    <div id="carousel-{{ forloop.index }}" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        {% for img in work.images %}
-        <div class="carousel-item {% if forloop.first %}active{% endif %}">
-          <img src="{{ img | relative_url }}" class="d-block w-100" alt="{{ work.title }}">
-        </div>
-        {% endfor %}
-      </div>
-      <a class="carousel-control-prev" href="#carousel-{{ forloop.index }}" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      </a>
-      <a class="carousel-control-next" href="#carousel-{{ forloop.index }}" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      </a>
-    </div>
-  </div>
 
-  <div class="col-md-4 d-flex flex-column justify-content-end">
-    <h3>{{ work.title }}</h3>
-    <p>{{ work.description }}</p>
-  </div>
+<div class="container py-5">
+  {% for work in site.data.gallery %}
+<div class="row align-items-end mb-5 {% if forloop.index0 % 2 == 1 %}flex-column-reverse flex-md-row{% endif %}">
+
+    <div class="col-md-8">
+        <div id="carousel-{{ forloop.index }}" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                {% for img in work.images %}
+                <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                    <img src="{{ img | relative_url }}" class="d-block w-100" alt="{{ work.title }}">
+                </div>
+                {% endfor %}
+            </div>
+            <a class="carousel-control-prev" href="#carousel-{{ forloop.index }}" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </a>
+            <a class="carousel-control-next" href="#carousel-{{ forloop.index }}" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </a>
+        </div>
+    </div>
+
+    <div class="col-md-4 d-flex flex-column justify-content-end">
+        <h3>{{ work.title }}</h3>
+        <p>{{ work.description }}</p>
+    </div>
 
 </div>
+  {% endfor %}
+</div>
+
+
