--- a/gallery.html
+++ b/gallery.html
@@ -6,17 +6,14 @@ permalink: /gallery/
 
 <div class="row flex-column-reverse flex-md-row py-2">
     <div class="col-md-8" id="bio">
-        <h1>Shihan Fang</h1>
+        <h1></h1>
         <p class="text-justify">
-            I am a senior undergraduate in <a href="https://acm.sjtu.edu.cn/home">Zhiyuan Honors Program ACM Class</a>
-            of Shanghai Jiao Tong University, majoring in Computer Science and Technology.
+            I studied calligraphy and painting, especially traditional Chinese painting, when I was a child.
+            My childhood art education shaped my personality and creativity, and also the way I perceive the world.
+            Calligraphy and painting are my personal playground for creativity and self-expression beyond academics.
         </p>
         <p class="text-justify">
-            I am currently a research intern with the <a href="https://zhang.ece.cornell.edu/">Zhang Research Group</a>
-            in the Computer Systems Laboratory at Cornell University, advised by <a
-                href="https://www.csl.cornell.edu/~zhiruz/">Prof. Zhiru Zhang</a>. Prior to this, I had the privilege of
-            working with <a href="https://www.cs.sjtu.edu.cn/~leng-jw/">Prof. Jingwen Leng</a> at Shanghai Jiao Tong
-            University.
+            Welcome to my magic world!
         </p>
     </div>
     <div class="col-md-4" style="z-index:4;">
@@ -26,38 +23,42 @@ permalink: /gallery/
 
 
 <div class="container py-5">
-  {% for work in site.data.gallery %}
-  <div class="row align-items-end mb-5 {% if forloop.index0 % 2 == 1 %}flex-column-reverse flex-md-row{% endif %}">
-    
-    <div class="col-md-8" style="min-height:300px;">
-      <div id="carousel-{{ forloop.index }}" class="carousel slide">
-        <div class="carousel-inner">
-          {% for img in work.images %}
-          <div class="carousel-item {% if forloop.first %}active{% endif %}">
-            <img src="{{ img | relative_url }}" class="d-block w-100" alt="{{ work.title }}">
-          </div>
-          {% endfor %}
+    {% for work in site.data.gallery %}
+
+    <div class="row align-items-end mb-5 {% if forloop.index0 % 2 == 1 %}flex-column-reverse flex-md-row{% endif %}">
+
+        <div class="col-md-8" style="min-height:400px;">
+            <div id="carousel-{{ forloop.index }}" class="carousel slide">
+                <div class="carousel-inner" style="height:400px;">
+                    {% for img in work.images %}
+                    <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                        <img src="{{ img | relative_url }}" class="d-block w-100 h-100" style="object-fit:contain;"
+                            alt="{{ work.title }}">
+                    </div>
+                    {% endfor %}
+                </div>
+                <a class="carousel-control-prev" href="#carousel-{{ forloop.index }}" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                </a>
+                <a class="carousel-control-next" href="#carousel-{{ forloop.index }}" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                </a>
+            </div>
         </div>
-        <a class="carousel-control-prev" href="#carousel-{{ forloop.index }}" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        </a>
-        <a class="carousel-control-next" href="#carousel-{{ forloop.index }}" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        </a>
-      </div>
-    </div>
 
-    <div class="col-md-4 d-flex flex-column justify-content-end">
-      <h3>{{ work.title }}</h3>
-      <p>{{ work.description }}</p>
-    </div>
 
-  </div>
-  {% endfor %}
+
+        <div class="col-md-4 d-flex flex-column justify-content-end">
+            <h3>{{ work.title }}</h3>
+            <p>{{ work.description }}</p>
+        </div>
+
+    </div>
+    {% endfor %}
 </div>
 
 <script>
-  $(document).ready(function(){
-    $('.carousel').carousel();
-  });
+    $(document).ready(function () {
+        $('.carousel').carousel();
+    });
 </script>
