--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@ permalink: /gallery/
 
 <div class="row flex-column-reverse flex-md-row py-2">
     <div class="col-md-8" id="bio">
-        <h1></h1>
+        <h1> </h1>
         <p class="text-justify">
             I studied calligraphy and painting, especially traditional Chinese painting, when I was a child.
             My childhood art education shaped my personality and creativity, and also the way I perceive the world.
@@ -27,13 +27,13 @@ permalink: /gallery/
 
     <div class="row align-items-end mb-5 {% if forloop.index0 % 2 == 1 %}flex-column-reverse flex-md-row{% endif %}">
 
-        <div class="col-md-8" style="min-height:400px;">
+        <div class="col-md-8">
             <div id="carousel-{{ forloop.index }}" class="carousel slide">
-                <div class="carousel-inner" style="height:400px;">
+                <div class="carousel-inner">
                     {% for img in work.images %}
                     <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                        <img src="{{ img | relative_url }}" class="d-block w-100 h-100" style="object-fit:contain;"
-                            alt="{{ work.title }}">
+                        <img src="{{ img | relative_url }}" class="d-block mx-auto"
+                            style="max-width:100%; max-height:400px;" alt="{{ work.title }}">
                     </div>
                     {% endfor %}
                 </div>
@@ -45,8 +45,6 @@ permalink: /gallery/
                 </a>
             </div>
         </div>
-
-
 
         <div class="col-md-4 d-flex flex-column justify-content-end">
             <h3>{{ work.title }}</h3>
