--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,14 @@ title: Gallery
 permalink: /gallery/
 ---
 
+<style>
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    background-color: rgba(0, 0, 0, 0.5); 
+    border-radius: 50%;  
+}
+</style>
+
 <div class="row flex-column-reverse flex-md-row py-2">
     <div class="col-md-8" id="bio">
         <h1>Shihan's Magical World</h1>
