--- a/gallery.html
+++ b/gallery.html
@@ -4,13 +4,6 @@ title: Gallery
 permalink: /gallery/
 ---
 
-<style>
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
-    background-color: rgba(0, 0, 0, 0.5); 
-    border-radius: 50%;  
-}
-</style>
 
 <div class="row flex-column-reverse flex-md-row py-2">
     <div class="col-md-8" id="bio">
@@ -48,10 +41,10 @@ permalink: /gallery/
                     {% endfor %}
                 </div>
                 <a class="carousel-control-prev" href="#carousel-{{ forloop.index }}" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="carousel-control-prev-icon" style="filter: invert(0) opacity(0.5);" aria-hidden="true"></span>
                 </a>
                 <a class="carousel-control-next" href="#carousel-{{ forloop.index }}" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="carousel-control-next-icon" style="filter: invert(0) opacity(0.5);" aria-hidden="true"></span>
                 </a>
             </div>
         </div>
