--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@ permalink: /gallery/
             My childhood art education shaped my personality and creativity, and also the way I perceive the world.
         </p>
         <p class="text-justify">
-            Calligraphy and painting are my personal playground for creativity and self-expression beyond academics.
+            Calligraphy and painting are my personal playground for creativity and self-expression alongside my academic pursuits.
         </p>
         <p class="text-justify">
             Welcome to my magical world!
